# SilentAlliance

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
frontend/: .env.local.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(main)/: layout.tsx
frontend/src/app/(main)/all/: page.tsx
frontend/src/app/(main)/create-space/: page.tsx
frontend/src/app/(main)/feed/: page.tsx
frontend/src/app/(main)/messages/: page.tsx
frontend/src/app/(main)/notifications/: page.tsx
frontend/src/app/(main)/popular/: page.tsx
frontend/src/app/(main)/post/[id]/: page.tsx
frontend/src/app/(main)/s/[slug]/: page.tsx
frontend/src/app/(main)/s/[slug]/submit/: page.tsx
frontend/src/app/(main)/settings/: page.tsx
frontend/src/app/(main)/submit/: page.tsx
frontend/src/app/(main)/trending/: page.tsx
frontend/src/app/(main)/u/[id]/: page.tsx
frontend/src/components/comment/: CommentThread.tsx
frontend/src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
frontend/src/components/post/: PostCard.tsx
frontend/src/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  Skeleton.tsx  Tabs.tsx  VoteButton.tsx
frontend/src/hooks/: mutations.ts  queries.ts  useRequireAuth.ts
frontend/src/lib/: api.ts  crypto.ts  motion.ts  store.ts  utils.ts
frontend/src/types/: index.ts
migrations/: 20240101000000_initial_schema.sql
src/: lib.rs  main.rs
src/api/: health.rs  mod.rs  routes.rs
src/api/auth/: handlers.rs  mod.rs  types.rs
src/api/comments/: handlers.rs  mod.rs
src/api/feed/: handlers.rs  mod.rs
src/api/identity/: handlers.rs  mod.rs
src/api/media/: handlers.rs  mod.rs
src/api/messages/: handlers.rs  mod.rs
src/api/moderation/: handlers.rs  mod.rs
src/api/notifications/: handlers.rs  mod.rs
src/api/posts/: handlers.rs  mod.rs
src/api/spaces/: handlers.rs  mod.rs
src/api/votes/: handlers.rs  mod.rs
src/config/: mod.rs  settings.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs
src/domain/repositories/: mod.rs
src/domain/services/: auth.rs  feed.rs  karma.rs  mod.rs  moderation.rs
src/errors/: api_error.rs  mod.rs
src/infrastructure/: mod.rs
src/infrastructure/cache/: mod.rs
src/infrastructure/crypto/: mod.rs
src/infrastructure/database/: mod.rs
src/infrastructure/storage/: mod.rs
src/jobs/: mod.rs  workers.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs  security.rs
src/websocket/: handlers.rs  mod.rs
