[package]
name = "silent-alliance"
version = "1.0.0"
edition = "2021"
authors = ["SilentAlliance Team"]
description = "An anonymous, privacy-first social discussion platform backend API"
license = "MIT"
repository = "https://github.com/silentalliance/silent-alliance"
keywords = ["anonymous", "privacy", "social", "api", "rust"]
categories = ["web-programming", "authentication"]
rust-version = "1.75"

[lib]
name = "silent_alliance"
path = "src/lib.rs"

[[bin]]
name = "silent-alliance"
path = "src/main.rs"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "compression-gzip", "fs"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }

# Async Runtime
tokio = { version = "1.35", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate"
] }

# Redis
deadpool-redis = "0.15"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.4", features = ["chrono"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Cryptography
ring = "0.17"
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
x25519-dalek = { version = "2.0", features = ["static_secrets", "serde"] }
chacha20poly1305 = "0.10"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
subtle = "2.5"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.21"
hex = "0.4"

# JWT
jsonwebtoken = "9.2"
rsa = { version = "0.9", features = ["sha2"] }

# Time & UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "v7", "serde"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# HTTP Client (for OAuth)
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# URL Parsing
url = "2.5"
urlencoding = "2.1"

# Image Processing
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif", "webp"] }

# Mime Types
mime = "0.3"
mime_guess = "2.0"

# Rate Limiting
governor = "0.6"

# Password Strength
zxcvbn = "2.2"

# Markdown Processing (for content)
pulldown-cmark = "0.9"
ammonia = "4.0"

# Snowflake IDs for distributed systems
snowflake = "1.3"

[dev-dependencies]
tokio-test = "0.4"
fake = { version = "2.9", features = ["derive", "chrono", "uuid"] }
once_cell = "1.19"
wiremock = "0.6"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.4"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
debug = true

[[bench]]
name = "api_benchmarks"
harness = false

[features]
default = []
test-utils = []
